--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "prepack": "npm run build",
     "prepare": "husky install",
     "semantic-release": "semantic-release --branches main",
-    "commit": "git-cz",
-    "dev": "nodemon src/index.ts"
+    "commit": "git-cz"
   },
   "release": {
     "branches": [
@@ -73,11 +72,11 @@
     "husky": "^8.0.0",
     "jest": "^29.6.3",
     "move-file-cli": "^3.0.0",
-    "nodemon": "^3.0.1",
     "prettier": "^3.0.2",
     "rimraf": "^5.0.1",
     "semantic-release": "^21.1.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "config": {
