Fix publish to github

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "lint:fix": "eslint src/**/*.ts --fix",
     "test": "jest --detectOpenHandles --coverage --verbose",
     "prepack": "npm run build",
+    "rename": "./node_modules/move-file-cli/cli.js README.md gitREADME.md",
+    "rename:back": "./node_modules/move-file-cli/cli.js gitREADME.md README.md",
+    "pack:local": "npm run rename&& npm run build && npm pack && npm run rename:back",
     "prepare": "husky install",
     "semantic-release": "semantic-release --branches main",
     "commit": "git-cz"
