--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -19,12 +19,13 @@ jobs:
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '18.x'
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
           scope: '@ekarpovs'
       - run: npm ci
-      # - run: npm unpublish --force
+      - run: npm run pack:local
+      - run: npm unpublish --force
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
