--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -15,17 +15,17 @@ jobs:
       contents: read
       packages: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
           scope: '@ekarpovs'
       - run: npm ci
-      - run: npm run pack:local
-      - run: npm unpublish --force
+      # - run: npm run pack:local
+      # - run: npm unpublish --force
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
