--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -25,7 +25,7 @@ jobs:
           scope: '@ekarpovs'
       - run: npm ci
       # - run: npm run pack:local
-      # - run: npm unpublish --force
+      - run: npm unpublish --force
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
