--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -1,4 +1,4 @@
-name: Release Github
+name: Publish Package to npmjs
 on:
   workflow_dispatch:
     branches: [ main ]
@@ -24,10 +24,6 @@ jobs:
           # Defaults to the user or organization that owns the workflow file
           scope: '@ekarpovs'
       - run: npm ci
-      # - run: npm run pack:local
-      - run: npm unpublish --force
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
