--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -24,6 +24,6 @@ jobs:
           # Defaults to the user or organization that owns the workflow file
           scope: '@ekarpovs'
       - run: npm ci
-      - run: npm publish
+      - run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
