Try to do the package public

--- a/.github/workflows/github.yaml
+++ b/.github/workflows/github.yaml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-          registry-url: 'https://npm.pkg.github.com'
+          registry-url: 'https://npm.pkg.github.org'
           # Defaults to the user or organization that owns the workflow file
           scope: '@ekarpovs'
       - run: npm ci
